# xl-pq-handler

./: .gitignore  .versionrc  .yarnrc.yml  CHANGELOG.md  README.md  package.json  pyproject.toml
.github/workflows/: python-publish.yml
src/xl_pq_handler/: __init__.py  __main__.py  handler.py  main.py
src/xl_pq_handler/classes/: __init__.py
src/xl_pq_handler/classes/pq_manager/: __init__.py  dependencies.py  excel_service.py  manager.py  models.py  parser.py  storage.py  utils.py
src/xl_pq_handler/ui/: __init__.py  theme.py  ui.py
src/xl_pq_handler/ui/components/: __init__.py  codeview.py
src/xl_pq_handler/ui/components/widgets/: __init__.py  base.py  buttons.py  inputs.py
src/xl_pq_handler/ui/theme/: __init__.py  fonts.py  manager.py
src/xl_pq_handler/ui/theme/definitions/: __init__.py  base.py  themes.py
src/xl_pq_handler/ui/views/: __init__.py  create.py  extract.py  library.py
src/xl_pq_handler/ui/views/create/: __init__.py  view.py
src/xl_pq_handler/ui/views/extract/: __init__.py  view.py
src/xl_pq_handler/ui/views/extract/components/: __init__.py  file_extractor.py  log_viewer.py  workbook_extractor.py
