[project]
name = "xl-pq-handler"
version = "1.0.3"
description = "A Pythonic Power Query (.pq) File Manager for Excel & Power BI Automation"
readme = "README.md"
authors = [
    { name = "tks18", email = "tksudharshan@gmail.com" }
]

license = "GPL-3.0-only"
license-files = ["LICENCSE"]

keywords = ["Power Query", "Excel", "Power BI", "Automation", "Analytics", "Audit"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Natural Language :: English"
]

requires-python = ">=3.13"


dependencies = [
    "pandas>=2.3.3",
    "pyperclip>=1.11.0",
    "pyyaml>=6.0.3",
    "xlwings>=0.33.16",
]

[project.urls]
Homepage = "https://github.com/tks18/xl-pq-handler"
Documentation = "https://github.com/tks18/xl-pq-handler#readme"
Repository = "https://github.com/tks18/xl-pq-handler"
Issues = "https://github.com/tks18/xl-pq-handler/issues"
Changelog = "https://github.com/tks18/xl-pq-handler/releases"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
